fixed jumbotron smallest defaulat width (was giant)

--- a/src/Jumbotron.scss
+++ b/src/Jumbotron.scss
@@ -41,17 +41,18 @@
 
 .nav-item {
     font-size: 18px;
-    padding: 12px;
+    padding: 12px, 12px, 12px, 12px;
 }
 
 .App-jumbotron-hero-image {
+    max-width: 250px;
+    padding: 10px;
     @media (min-width: 450px) { 
         max-width: 500px;
-        padding: 10px;
     }
 
     @media (min-width: 800px) { 
-        max-width: 850px;
+        max-width: 800px;
     }
 
 
